--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,14 @@ jobs:
       - name: Build step
         run: "deno task build" # 📝 Update the build command(s) if necessary
 
+      - name: Test step
+        run: "deno task test" # 📝 Update the test command(s) if necessary
+
+      - name: Refresh database
+        run: "deno task fetch" # 📝 Update the test command(s) if necessary
+
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "example-project" # 📝 Update the deploy project name if necessary
+          project: "emailchecker" # 📝 Update the deploy project name if necessary
           entrypoint: "./main.ts" # 📝 Update the entrypoint if necessary
