--- a/deno.json
+++ b/deno.json
@@ -32,7 +32,8 @@
     "tailwindcss": "npm:tailwindcss@3.3.5",
     "tailwindcss/": "npm:/tailwindcss@3.3.5/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js",
-    "$std/": "https://deno.land/std@0.211.0/"
+    "$std/": "https://deno.land/std@0.211.0/",
+    "$logging/": "https://deno.land/x/fresh_logging@1.1.2/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
