--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
     branches: [master]
   pull_request:
     branches: master
+  schedule:
+    - cron: "0 0 * * 0" # Every Sunday at 00:00 UTC
 
 jobs:
   deploy:
